--- a/BeyondAcademy/BeyondAcademy/appsettings.json
+++ b/BeyondAcademy/BeyondAcademy/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=HP;Database=BeyondAcademy;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=LAPTOP-USG0TAIJ;UserId=sa;Password=Jagannath29;Database=BeyondAcademy;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
